--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
 @import "tailwindcss";
 
+/* icons style */
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+  line-height: 1;
+  display: inline-flex;
+  vertical-align: middle;
+}
+
 @theme {
+  /* font  */
+  --font-sans: "Cairo", sans-serif;
+
+  /* color */
   --color-main: #4CAF50;
+
+
+}
+
+@layer base {
+  body {
+    font-family: var(--font-sans);
+  }
 }
