--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
   font-family: "Cairo", sans-serif;
 }
 
+/* icons style */
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+  line-height: 1;
+  display: inline-flex;
+  vertical-align: middle;
+}
+
 @theme {
   --color-main: #4CAF50;
   --breakpoint-sm: 576px;
